# it-eli-mcp

./: .gitignore  .mcp.json.example  .publication-gate.json  CHANGELOG.md  CONSTITUTION.md  DISCOVERY.md  Dockerfile  README.md  SOURCES.md  THIRD_PARTY.md  pyproject.toml  server.json
.github/workflows/: release.yml
src/it_eli_mcp/: __init__.py  __main__.py  akn.py  audit.py  cache.py  citations.py  client.py  models.py  server.py  urn.py  verify.py
src/it_eli_mcp/caselaw/: __init__.py  citations.py  corpus.py  db.py  ingest.py  models.py  records.py
src/it_eli_mcp/cassazione/: __init__.py  citations.py  client.py  models.py  records.py
src/it_eli_mcp/giustizia_amministrativa/: __init__.py  citations.py  client.py  models.py  records.py
tests/: test_akn.py  test_caselaw_citations.py  test_caselaw_corpus.py  test_caselaw_db.py  test_caselaw_ingest.py  test_caselaw_records.py  test_caselaw_smoke.py  test_cassazione_citations.py  test_cassazione_client.py  test_cassazione_records.py  test_cassazione_smoke.py  test_ga_citations.py  test_ga_client.py  test_ga_records.py  test_ga_smoke.py  test_instructions_drift.py  test_smoke.py  test_urn.py  test_verify.py  test_verify_smoke.py  test_verify_tool.py
tests/fixtures/: act_sample.akn.xml  cassazione_sample_solr_response.json  code_sample.akn.xml  ga_document_sample.xml  ga_search_sample.html
