[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "italy-eli-mcp"
version = "0.5.0"
description = "MCP server for Italian law: federal legislation via Normattiva (Akoma Ntoso / URN:NIR / ELI, point-in-time text), Constitutional Court (Corte Costituzionale) case law from the Court's official open data (ECLI-native), Supreme Court (Corte di Cassazione) case law via the Court's free public SentenzeWeb search, and administrative case law (Consiglio di Stato, C.G.A.R.S., TAR) via the Giustizia Amministrativa portal search, live."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Matematic Solutions", email = "kontakt@matematic.co" },
    { name = "Wieslaw Mazur", email = "mazur.wieslaw2022@gmail.com" },
]
keywords = ["mcp", "legaltech", "italy", "eli", "ecli", "normattiva", "corte-costituzionale", "cassazione", "case-law", "akoma-ntoso", "urn-nir", "law"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
dependencies = [
    "fastmcp>=0.2.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "diskcache>=5.6",
    "anyio>=4.3",
    "lxml>=5.2",
    "certifi>=2024.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.urls]
Repository = "https://github.com/matematicsolutions/it-eli-mcp"
Issues = "https://github.com/matematicsolutions/it-eli-mcp/issues"
Homepage = "https://matematic.co"

[project.scripts]
italy-eli-mcp = "it_eli_mcp.server:main"
italy-eli-mcp-caselaw-ingest = "it_eli_mcp.caselaw.ingest:main"

[tool.hatch.build.targets.wheel]
packages = ["src/it_eli_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# pydantic fields mirror source names verbatim
"src/it_eli_mcp/models.py" = ["N815"]
# INSTRUCTIONS is a long-form operational prose string shown to the LLM
"src/it_eli_mcp/server.py" = ["E501"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["diskcache.*", "fastmcp.*", "lxml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "smoke: live network tests against Normattiva (deselect with -m 'not smoke')",
]
